# BlackbirdSportsUploader

./: .env.example  .gitignore  Dockerfile  README.md  auth.py  config.py  device.py  device_sync.py  docker-compose.yml  fit_processor.py  logger.py  main.py  pyproject.toml  test_output.txt  uploader.py
.github/workflows/: docker-publish.yml
src/blackbird_sports_uploader/: auth.py  bb16.py  config.py  device.py  fit_processor.py  logger.py  main.py  uploader.py
tests/: captured_packets.txt  test_protocol.py
