[project]
name = "bb16-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleak>=2.1.1",
    "fitdecode>=0.11.0",
    "pure-protobuf>=3.1.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "typer>=0.23.0",
    "typing-extensions>=4.15.0",
]
