[project]
name = "blackbird_sports_uploader"
version = "0.1.0"
description = "BLE Uploader for BB16 Device"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleak>=2.1.1",
    "fitdecode>=0.11.0",
    "pure-protobuf>=3.1.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "typer>=0.23.0",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
blackbird-sync = "blackbird_sports_uploader.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blackbird_sports_uploader"]
